# ChangeLog for sys-fs/xfsdump
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/xfsdump/ChangeLog,v 1.71 2009/06/25 22:55:44 vapier Exp $

*xfsdump-3.0.1 (25 Jun 2009)

  25 Jun 2009; Mike Frysinger <vapier@gentoo.org> +xfsdump-3.0.1.ebuild:
  Version bump #275405 by Lars Wendler.

  24 Feb 2009; Mike Frysinger <vapier@gentoo.org> xfsdump-3.0.0.ebuild:
  Apply blocker as some binaries have moved from xfsdump to xfsprogs #259966
  by Robin Johnson.

*xfsdump-3.0.0 (22 Feb 2009)

  22 Feb 2009; Mike Frysinger <vapier@gentoo.org> +xfsdump-3.0.0.ebuild:
  Version bump #259894 by Lars (Polynomial-C).

  31 Jan 2009; Jeroen Roovers <jer@gentoo.org> xfsdump-2.2.48.ebuild:
  Stable for HPPA (bug #235017).

  25 Aug 2008; nixnut <nixnut@gentoo.org> xfsdump-2.2.48.ebuild:
  Stable on ppc wrt bug 235017

  25 Aug 2008; Raúl Porcel <armin76@gentoo.org> xfsdump-2.2.48.ebuild:
  ia64 stable wrt #235017

  24 Aug 2008; Tobias Klausmann <klausman@gentoo.org> xfsdump-2.2.48.ebuild:
  Stable on alpha, bug #235017

  24 Aug 2008; Markus Rothe <corsair@gentoo.org> xfsdump-2.2.48.ebuild:
  Stable on ppc64; bug #235017

  17 Aug 2008; Markus Meier <maekke@gentoo.org> xfsdump-2.2.48.ebuild:
  amd64/x86 stable, bug #235017

*xfsdump-2.2.48 (23 Feb 2008)

  23 Feb 2008; Mike Frysinger <vapier@gentoo.org> +xfsdump-2.2.48.ebuild:
  Version bump #211113 by Raúl Porcel.

  19 Nov 2007; Joshua Kinard <kumba@gentoo.org> xfsdump-2.2.46.ebuild:
  Stable on mips, per #197204.

  02 Nov 2007; Steve Dibb <beandog@gentoo.org> xfsdump-2.2.46.ebuild:
  amd64 stable, bug 197204

  31 Oct 2007; Jeroen Roovers <jer@gentoo.org> xfsdump-2.2.46.ebuild:
  Stable for HPPA (bug #197204).

  30 Oct 2007; nixnut <nixnut@gentoo.org> xfsdump-2.2.46.ebuild:
  Stable on ppc wrt bug 197204

  29 Oct 2007; Raúl Porcel <armin76@gentoo.org> xfsdump-2.2.46.ebuild:
  alpha/ia64/x86 stable wrt #197204
