@@ -3,15 +3,17 @@ Hash: SHA256
 
 AUX xfsdump-2.2.42-Makefile-deps.patch 589 RMD160 2856cb63955c1c4feba33601b8916e99f92a6a08 SHA1 20a0b53d4ea028d66565dfdbed562a544c19bf3f SHA256 723814d48474f1c536e3e56ed06a7532a500f690dd5419124635a6519ba77aa4
 DIST xfsdump-3.0.1.tar.gz 867488 RMD160 9cd52f873d3d6108a1b6f5f468db4d6a27079a52 SHA1 7f7e168e13d8ec2bce7ae19cf3123618b654975a SHA256 ca5dd38a5710c99cb5d84c2ad41d6c6eff57fa5abf4ed271680e2bf63ae6dc7d
+DIST xfsdump-3.0.4.tar.gz 790095 RMD160 cbebdbd3ff46153da46e7f99cf0c585a68c6de40 SHA1 7b127ad608986d4330587b38e666669f914db585 SHA256 d3932f0d482f6f77ec8519ce24c00edbe006262751bfb4ad4b4bc3e219d807d1
 DIST xfsdump_2.2.48-1.tar.gz 581376 RMD160 ff877c38ecb75061a2bf6f7d3bbc135ffb346cfb SHA1 bdfffa637efa23329899fd38d6b77119d51ea039 SHA256 381a1015766fccd5f6fc1955a5dd692077c83a75d554f4765e84a001186f7c8f
 EBUILD xfsdump-2.2.48.ebuild 1146 RMD160 1535ed00bf4b16e52069e67c3a3d3c5ecdf12acb SHA1 3dd7dfcd18063596e3495ad6c0c7970d8a87d651 SHA256 7a568f76c76dc69effbd34b5a49371a0f2e9a7c3b6e24a1d4e23d8da074c4596
 EBUILD xfsdump-3.0.1.ebuild 1087 RMD160 1c0a353eb664b4f0019a758c312ee10498599478 SHA1 181f88c5b5cfee122b721811668a7c5dfe227a87 SHA256 af21bcd1108d1a08fcb2ba94981570902dc25604fa184936b1f95b30817d6f44
-MISC ChangeLog 10530 RMD160 ff2018f221f48c370ee93c1a126fd270c2eda6a5 SHA1 837fadd9901702caeee71fa42903244b7efb2077 SHA256 2e59660907d73c48e6c6ccc1e265d2e7c095e6585deccede06fc04cd04f237b7
+EBUILD xfsdump-3.0.4.ebuild 1087 RMD160 a56df796127bbe7a7b82eaa3960697c9599765ce SHA1 96544dbd67f93fb83b3b00f2ad72894a26ded080 SHA256 f4e697dc1688d78be63a1a6cea4c23be7d244c6b945127102d925d909c79857d
+MISC ChangeLog 10650 RMD160 5d52484c7c82154fed106a18e1521d8343a6f618 SHA1 c38bf8d1752b3743e8eb3f61b763453b3ee1871c SHA256 0441853002d9cbe879eaa376762e5fc0f6515a079c1d5ccafca1a1420f6381e2
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iF4EAREIAAYFAktH8vUACgkQTwhj9JtAlp4JdQEAuu+qx/wRWkXDRfD3LowxoRd8
-P2YF/mFKKmx1MYBtQNcA/A0xnGnB9aDPwdTUp5EqPz++28LOMpJjDmWLBmKiQfrC
-=nBgs
+iF4EAREIAAYFAkusJAAACgkQTwhj9JtAlp7rkgD/dZyjZt6Lk2IVK1KY9JkC5ATN
+ZTRZiK36EqyMe9cKjA0A/AjpcD8J/z0rRWTllsPozmL50jHx8hn3/iPxuW7oTG1A
+=48NZ
 -----END PGP SIGNATURE-----
