@@ -1,6 +1,11 @@
 # ChangeLog for sys-fs/xfsdump
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/xfsdump/ChangeLog,v 1.71 2009/06/25 22:55:44 vapier Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/xfsdump/ChangeLog,v 1.72 2010/03/26 03:03:25 vapier Exp $
+
+*xfsdump-3.0.4 (26 Mar 2010)
+
+  26 Mar 2010; Mike Frysinger <vapier@gentoo.org> +xfsdump-3.0.4.ebuild:
+  Version bump.
 
 *xfsdump-3.0.1 (25 Jun 2009)
 
